# sales_agent_commission_for_ERPNext

./: .gitignore  CHANGELOG.md  DEPLOYMENT_PACKAGE.md  DEPLOYMENT_SUMMARY.md  INSTALL.md  INSTALLATION_FIXED.md  INSTALLATION_GUIDE.md  INSTALLATION_TROUBLESHOOTING.md  MANIFEST.in  README.md  RELEASE_NOTES_v1.1.0.md  SYSTEM_DESIGN.md  VERSION_MANAGEMENT.md  __init__.py  changes_template.json  deploy.sh  fix_installation.py  hooks.py  modules.txt  pyproject.toml  setup.py  version_manager.py
sales_agent_commission/: AGENT_COMMISSION_MODULE.md  MODULE_IMPLEMENTATION_SUMMARY.md  __init__.py  hooks.py  install.py  modules.txt  overrides.py  tasks.py
sales_agent_commission/doctype/agent_bank_account/: agent_bank_account.json
sales_agent_commission/doctype/agent_commission_detail/: agent_commission_detail.json
sales_agent_commission/doctype/agent_commission_entry/: __init__.py  agent_commission_entry.json  agent_commission_entry.py
sales_agent_commission/doctype/agent_commission_item/: __init__.py  agent_commission_item.json  agent_commission_item.py
sales_agent_commission/doctype/agent_commission_payment/: agent_commission_payment.json  agent_commission_payment.py
sales_agent_commission/doctype/agent_commission_rate/: __init__.py  agent_commission_rate.json  agent_commission_rate.py
sales_agent_commission/doctype/agent_commission_rule/: __init__.py  agent_commission_rule.json  agent_commission_rule.py
sales_agent_commission/doctype/agent_commission_tier/: __init__.py  agent_commission_tier.json  agent_commission_tier.py
sales_agent_commission/doctype/agent_customer_assignment/: __init__.py  agent_customer_assignment.json  agent_customer_assignment.py
sales_agent_commission/doctype/agent_ledger_entry/: agent_ledger_entry.json
sales_agent_commission/doctype/agent_master/: agent_master.json  agent_master.py
sales_agent_commission/doctype/agent_payment_entry_item/: agent_payment_entry_item.json
sales_agent_commission/doctype/agent_territory_assignment/: agent_territory_assignment.json
sales_agent_commission/doctype/commission_payment_item/: __init__.py  commission_payment_item.json  commission_payment_item.py
sales_agent_commission/doctype/commission_payment_voucher/: __init__.py  commission_payment_voucher.json  commission_payment_voucher.py
sales_agent_commission/doctype/sales_agent/: sales_agent.json  sales_agent.py
sales_agent_commission/public/js/: sidebar.js  (+2 more)
sales_agent_commission/sales_agent_commission/: __init__.py
(+25 files in other folders)
