[project]
name = "sales_agent_commission"
version = "0.1.0"
description = "Comprehensive Sales Agent Commission Management System"
authors = [
    {name = "Frappe Technologies Pvt. Ltd.", email = "support@frappe.io"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "frappe>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/frappe/sales_agent_commission"
Repository = "https://github.com/frappe/sales_agent_commission"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''