[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales_agent_commission"
version = "1.0.0"
description = "Comprehensive Sales Agent Commission Management System for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Frappe Technologies Pvt. Ltd.", email = "support@frappe.io"}
]
keywords = ["erpnext", "commission", "sales", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[project.urls]
Homepage = "https://github.com/frappe/sales_agent_commission"
Repository = "https://github.com/frappe/sales_agent_commission"
Documentation = "https://docs.frappe.io/apps/sales_agent_commission"
Issues = "https://github.com/frappe/sales_agent_commission/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sales_agent_commission*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt", "*.py", "*.js", "*.css", "*.html"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''